--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,21 @@ uuid = "eee18aad-ff85-4bd9-9abe-3b2c7fa95750"
 authors = ["Allen Chen <allenmuhanchen@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+TimesDates = "bdfc003b-8df8-5c39-adcd-3a9087f5df4a"
+XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
+
 [compat]
-julia = "1"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
