--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ TimesDates = "bdfc003b-8df8-5c39-adcd-3a9087f5df4a"
 XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 
 [compat]
+DataFramesMeta = "0.12"
 julia = "1.6"
 
 [extras]
